src/objects/Allocation_amount__c.object
<CustomObject>
    <fields>
        <fullName>Allocated__c</fullName>
        <label>Requested amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approved_Amount__c</fullName>
        <label>Approved amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Allocation_amounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approvedate__c</fullName>
        <label>Approve date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Costcentre__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cost center</label>
        <referenceTo>Costcentre__c</referenceTo>
        <relationshipLabel>Allocation Amounts</relationshipLabel>
        <relationshipName>Allocation_amounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FiscalYear__c</fullName>
        <label>FiscalYear</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Musqot_fiscal_year__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Musqot fiscal year</label>
        <referenceTo>Musqot_fiscal_year__c</referenceTo>
        <relationshipLabel>Allocation amounts</relationshipLabel>
        <relationshipName>Allocation_amounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_date__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Request date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>To_Marketing_activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>To marketing activity</label>
        <referenceTo>Marketing_activity__c</referenceTo>
        <relationshipLabel>Allocation Amounts</relationshipLabel>
        <relationshipName>Allocation_amounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>To_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>To plan</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipName>Allocation_amounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>To_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>To project</label>
        <referenceTo>Subproject__c</referenceTo>
        <relationshipName>Allocation_amounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipName>Allocation_amounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Subproject__c</referenceTo>
        <relationshipName>Allocation_amounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Allocation amount</label>
    <nameField>
        <label>Allocation Amount Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Allocation amounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>